# kino-api

./: .env.example  Cargo.toml  Dockerfile  README.md  database.sql  docker-compose.yaml  example.env
src/: lib.rs  main.rs
src/api/: mod.rs  serve.rs  server.rs  snowflake.rs
src/api/database/: mod.rs  structs.rs
src/api/jwt/: client.rs  mod.rs  payload.rs
src/api/middlewares/: auth.rs  limiter.rs  mod.rs
src/api/routes/: mod.rs  signin.rs  users.rs
src/dicts/: database.rs  mod.rs
src/dicts/collections/: bktree.rs  mod.rs  word_trie.rs
src/dicts/wordnet/: mod.rs  word.rs
src/google_signin/: client.rs  error.rs  mod.rs  payload.rs
src/server/: mod.rs  rest.rs  server.rs  snowflake.rs
src/server/jwt/: client.rs  mod.rs  payload.rs
src/server/routes/: mod.rs  signin.rs
src/server/routes/middlewares/: auth.rs  limiter.rs  mod.rs
