[package]
name = "kino-api"
version = "0.1.0"
edition = "2021"
default-run = "kino-api"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
reqwest = "0.12"

levenshtein = "1.0.5"

jsonwebtoken = "9"
cache_control  = "0.2.0"
